<resources>
    <string name="app_name">VxutJLPT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Home</string>
    <string name="nav_account">My Account</string>
    <string name="nav_leaderboard">LeaderBoard</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
</resources>