<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/nav_leaderboard" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account" />
    </group>

    <item android:title="Communication">
        <menu>
            <item android:id="@+id/nav_settings"
                android:title="@string/nav_setting"
               />

            <item android:id="@+id/nav_about"
                android:title="@string/nav_about"
               />

            <item android:id="@+id/nav_logout"
                android:title="Logout"
               />
        </menu>
    </item>
</menu>